[project]
name = "riskguard"
version = "0.1.0"
description = "Portfolio compliance and risk assessment tool"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]",
    "polars",
    "asyncpg",
    "streamlit",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",   # also used for TestClient in FastAPI tests
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]
